# spurious-arrow-of-time

./: .gitignore  BENCHMARK.md  EXPERIMENT_RUNBOOK.md  README.md  RESEARCH.md  goal.md  pyproject.toml  requirements.txt
configs/: ablation_negative_controls.yaml  baselines.yaml  closure_ink_advection_diffusion.yaml  closure_sta.yaml  counterfactual_sensitivity.yaml  fixed_variance_diagnostic.yaml  ink_advection_diffusion_default.yaml  ink_advection_diffusion_full.yaml  ink_advection_diffusion_smoke.yaml  irreversible_source_extended.yaml  irreversible_source_main.yaml  irreversible_source_smoke.yaml  sib_ablation.yaml  sid_ink_advection_diffusion_smoke.yaml  sta_benchmark_challenge.yaml  sta_benchmark_difficulty_sweep.yaml  sta_default.yaml  sta_ep_ratio_sweep.yaml  sta_full.yaml  sta_setpoint_sweep.yaml  sta_smoke.yaml
docs/: benchmark_acceptance_criteria.md  benchmark_candidates.md  benchmark_design_decision.md  claim_evidence_matrix.md  claim_matrix.md  cleanup_manifest.md  figure_plan.md  figure_table_plan.md  latest_result_summary.md  literature_matrix.md  main_experiment_protocol.md  main_result_interpretation.md  manuscript_length_budget.md  manuscript_plan.md  method_taxonomy.md  model_card.md  novelty_and_redesign.md  novelty_gap.md  paper_handoff.md  rejection_risk.md  result_claim_policy.md  smoke_interpretation.md  static_leakage_audit.md  submission_risk_audit.md  table_plan.md  theory_definitions.md  writing_style_guide.md
experiments/: 21_closure_spurious_causality_suite.sh  finalize_paper.sh  full_suite.sh  main_experiments.sh  preflight.sh  (+3 more)
(+873 files in other folders)
